# MagicTower

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qml_test_res.qrc
qml_test/: CMakeLists.txt  Main.qml  Singleton.h  Theme.cpp  Theme.h  main.cpp
qml_test/control/: IconButton.qml  TitleBar.qml
src/: CMakeLists.txt
src/constant/: TowerConstant.h
src/gui/: MainWindow.cpp  MapForm.cpp  MapForm.h  ScoreForm.cpp  ScoreForm.h  ScoreForm.ui
